--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
-  "public": "src"
+  "builds": [
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "src"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/$1"
+    }
+  ]
 }
