--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
   "builds": [
     {
-      "src": "src/**/*",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "src"
-      }
+      "src": "index.html",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/$1"
+      "dest": "/$1"
     }
   ]
 }
