--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,17 @@
 {
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static-build"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "src"
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "src/$1"
     }
   ]
 }
