--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "src/**/*.scss",
-      "use": "@vercel/static-build"
-    },
-    {
-      "src": "src/images/**/*",
-      "use": "@vercel/static-build"
+      "src": "gulpfile.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/public/$1"
+      "dest": "/dist/$1"
     }
   ]
 }
